# fast_zero_async

./: .coverage  .gitignore  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: ab7cb1a0ae78_create_users_table.py  b36a1d327051_create_users_table.py
src/: app.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
