[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Goncalves",email = "felipeepires.95@gmail.com"}
]
readme = "README.md"
requires-python = ">3.12,<4.0"
dependencies = [
    "fastapi (>=0.123.4,<0.124.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
lint = 'ruff check .'
pre_format = 'ruff check . --fix'
format = 'ruff format .'
run = 'fastapi dev src/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src -vv'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
